# Umbra2D

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NodeEditor.json  README.md  Saves.txt  Settings.txt  appicon.rc  bigbruh.lua  build.sh  clear.sh  imgui.ini  index.md  script.chai  script.lua  umbra.ini
Dependencies/Assets/Text/: Test.txt
Dependencies/Include/: AssetLibrary.h  AudioPlayer.h  Camera.h  Colliders.h  Common.h  Entity.h  FileExplorer.h  Fonts.h  FrameBuffer.h  Gui.h  Loader.h  Quad.h  Saver.h  Scene.h  Script.h  Shader.h  Texture.h  Umbra2D.h  Window.h
Dependencies/Include/Audio/: AudioPlayer.h  myFileHandler.h
Dependencies/Include/Components/: Camera.h  Colliders.h  Component.h  PropertyComponent.h  Renderable.h
Dependencies/Include/Engines/: Engine.h  Physics.h  Renderer.h
Dependencies/Include/Graphics/: Fonts.h  FrameBuffer.h  GraphicsPipeline.h  Quad.h  RenderPass.h  Shader.h
Dependencies/Include/Graphics/RenderPasses/: OneTypeVoidPass.h  RenderPass.h
Dependencies/Include/Gui/: Editor.h  EngineSettings.h  FileExplorer.h  ImGuiElement.h  ImGuiTheme.h  Logger.h
Dependencies/Include/IO/: Loader.h  Saver.h  SimpleIO.h
Dependencies/Include/include/: AudioPlayer.h  myFileHandler.h
Dependencies/Shader/basic/: frag.glsl  vert.glsl
Dependencies/Shader/collider/: frag.glsl  vert.glsl
Dependencies/Shader/collider/instanced/: frag.glsl  vert.glsl
Dependencies/Shader/sprite/: frag.glsl  vert.glsl
Dependencies/Shader/text/: frag.glsl  vert.glsl
Dependencies/Shaders/basic/: vert.glsl
Dependencies/Shaders/sprite/: frag.glsl  vert.glsl
Dependencies/Source/: AssetLibrary.cpp  Camera.cpp  Colliders.cpp  Engine.cpp  Entity.cpp  FileExplorer.cpp  Fonts.cpp  FrameBuffer.cpp  Gui.cpp  Loader.cpp  Main.cpp  Quad.cpp  Saver.cpp  Scene.cpp  Script.cpp  Shader.cpp  Texture.cpp  Window.cpp
Dependencies/Source/Audio/: AudioPlayer.cpp  myFileHandler.cpp
Dependencies/Source/Components/: Camera.cpp  Colliders.cpp  Component.cpp  PropertyComponent.cpp  Renderable.cpp
Dependencies/Source/Engines/: Engine.cpp  Physics.cpp  Renderer.cpp
Dependencies/Source/Graphics/: Fonts.cpp  FrameBuffer.cpp  GraphicsPipeline.cpp  Quad.cpp  RenderPass.cpp  Shader.cpp
Dependencies/Source/Graphics/RenderPasses/: RenderPass.cpp
Dependencies/Source/Gui/: Editor.cpp  EngineSettings.cpp  FileExplorer.cpp  Gui.cpp  ImGuiTheme.cpp  Logger.cpp
Dependencies/Source/IO/: Loader.cpp  Saver.cpp  SimpleIO.cpp
Dependencies/Source/src/: AudioPlayer.cpp  FileHandler.cpp  StreamHandler.cpp  main.cpp  myFileHandler.cpp  util.cpp
Dependencies/WIP/: AudioPlayer.cpp  Colliders.cpp  Colliders.h  Fonts.cpp  Fonts.h  GameObjects.h  ImGuiSamples  Physics.cpp  generatingEntities
Projects/: Saves.txt
